<resources>

    <string name="app_name">Qual é o número?</string>
    <string name="amarelo">Amarelo</string>
    <string name="azul">Azul</string>
    <string name="ciano">Azul Claro</string>
    <string name="dkgray">Cinza Escuro</string>
    <string name="enviar">Enviar</string>
    <string name="hint">Digite o palpite</string>
    <string name="ltgray">Cinza Claro</string>
    <string name="nova_partida">Nova Partida</string>
    <string name="preto">Preto</string>
    <string name="rosa">Rosa</string>
    <string name="selecionar_cores">Selecionar Cores</string>
    <string name="verde">Verde</string>
    <string name="vermelho">Vermelho</string>

</resources>