<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResposta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btNovaPartida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/nova_partida"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edPalpite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789"
            android:hint="@string/hint"
            android:inputType="number|textPersonName"
            android:maxLength="3" />

        <Button
            android:id="@+id/btEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/a3"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/a2"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/a1"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/f3"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/b3"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/f2"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/b2"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/f1"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/b1"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/g3"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent"
            android:textAlignment="viewStart" />

        <Button
            android:id="@+id/g2"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/g1"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/e3"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/c3"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/e2"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/c2"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/e1"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/c1"
            android:layout_width="20dp"
            android:layout_height="60dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:background="@color/colorAccent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btNovaPartida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/d3"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/d2"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />

        <Button
            android:id="@+id/d1"
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/colorAccent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>